Doodler class and some basic doodler style

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <div class="score">Score: 0</div>
       <div class="doodler"></div>
     </div>
-    <button id="start-button">Start Game</button>
+    <!-- <button id="start-button">Start Game</button> -->
 
     <!-- <audio id="jump-sound" src="jump.mp3" preload="auto"></audio> -->
     <!-- <audio id="gameover-sound" src="gameover.mp3" preload="auto"></audio> -->
 
-    <script src="js/game.js"></script>
-    <script src="js/platform.js"></script>
+    <!-- <script src="js/game.js"></script> -->
+    <!-- <script src="js/platform.js"></script> -->
     <script src="js/doodler.js"></script>
   </body>
 </html>
