Added platforms and the logic for moving platforms down

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- <audio id="gameover-sound" src="gameover.mp3" preload="auto"></audio> -->
 
     <!-- <script src="js/game.js"></script> -->
-    <!-- <script src="js/platform.js"></script> -->
     <script src="js/doodler.js"></script>
+    <script src="js/platform.js"></script>
   </body>
 </html>
