--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
   </head>
   <body>
     <div class="game-container">
-      <div class="score">Score: 0</div>
+      <div class="sun"></div>
+
+      <!-- Moving clouds -->
+      <div class="cloud small" style="left: 50px"></div>
+      <div class="cloud medium" style="left: 200px"></div>
+      <div class="cloud large" style="left: 100px"></div>
+
+      <!-- Static mountain and trees -->
+      <div class="mountain"></div>
+      <div class="tree" style="left: 50px"></div>
+      <div class="tree" style="left: 200px"></div>
+      <div class="money-board">Money: 0</div>
+      <!-- <div class="score">Score: 0</div> -->
       <div class="doodler"></div>
     </div>
     <!-- <button id="start-button">Start Game</button> -->
@@ -17,8 +29,8 @@
     <!-- <audio id="gameover-sound" src="gameover.mp3" preload="auto"></audio> -->
 
     <!-- <script src="js/game.js"></script> -->
-    <script src="js/game.js"></script>
-    <script src="js/doodler.js"></script>
-    <script src="js/platform.js"></script>
+    <script src="src/js/doodler.js"></script>
+    <script src="src/js/platform.js"></script>
+    <script src="src/js/game.js"></script>
   </body>
 </html>
